feat: add header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="avatar-wrap">
+      <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img">
+    </div>
+    <div class="header-content">
+      <h1 class="header-title">Vyacheslav Fialko</h1>
+      <p class="header-subtitle">Web developer</p>
+    </div>
+  </header>
 </body>
 </html>
