feat: add contact section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
       <p class="header-subtitle">Web developer</p>
     </div>
   </header>
+  <main class="main">
+    <section class="section">
+      <h2 class="section-title">Contact</h2>
+      <ul class="list">
+        <li class="list-item">tel: +38(099)-70-33-207</li>
+        <li class="list-item">telegram: +38(099)-70-33-207</li>
+        <li class="list-item">email: vyacheslav1@ukr.net</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
