--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <li class="list-item">email: vyacheslav1@ukr.net</li>
       </ul>
     </section>
+    <section class="section">
+      <h2 class="section-title">About me</h2>
+      <p class="section-subtitle">I have ability to learn quickly and learn new things.</p>
+      <p class="section-subtitle">I want be web developer.</p>
+    </section>
   </main>
 </body>
 </html>
