--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       <p class="section-subtitle">I have ability to learn quickly and learn new things.</p>
       <p class="section-subtitle">I want be web developer.</p>
     </section>
+    <section class="section">
+      <h2 class="section-title">Skills</h2>
+      <ul class="list">
+        <li class="list-item">HTML</li>
+        <li class="list-item">CSS</li>
+        <li class="list-item">Java Script</li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
