--- a/index.html
+++ b/index.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vyacheslav Fialko CV</title>
-  <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-  <header class="header">
-    <div class="avatar-wrap">
-      <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img">
-    </div>
-    <div class="header-content">
-      <h1 class="header-title">Vyacheslav Fialko</h1>
-      <p class="header-subtitle">Web developer</p>
-    </div>
-  </header>
-  <main class="main">
-    <section class="section">
-      <h2 class="section-title">Contact</h2>
-      <ul class="list">
-        <li class="list-item">tel: +38(099)-70-33-207</li>
-        <li class="list-item">telegram: +38(099)-70-33-207</li>
-        <li class="list-item">email: vyacheslav1@ukr.net</li>
-      </ul>
-    </section>
-    <section class="section">
-      <h2 class="section-title">About me</h2>
-      <p class="section-subtitle">I have ability to learn quickly and learn new things.</p>
-      <p class="section-subtitle">I want be web developer.</p>
-    </section>
-    <section class="section">
-      <h2 class="section-title">Skills</h2>
-      <ul class="list">
-        <li class="list-item">HTML</li>
-        <li class="list-item">CSS</li>
-        <li class="list-item">Java Script</li>
-      </ul>
-    </section>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vyacheslav Fialko CV</title>
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="avatar-wrap">
+        <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img" />
+      </div>
+      <div class="header-content">
+        <h1 class="header-title">Vyacheslav Fialko</h1>
+        <p class="header-subtitle">Web developer</p>
+      </div>
+    </header>
+    <main class="main">
+      <section class="section">
+        <h2 class="section-title">Contact</h2>
+        <ul class="list">
+          <li class="list-item">tel: +38(099)-70-33-207</li>
+          <li class="list-item">telegram: +38(099)-70-33-207</li>
+          <li class="list-item">email: vyacheslav1@ukr.net</li>
+        </ul>
+      </section>
+      <section class="section">
+        <h2 class="section-title">About me</h2>
+        <p class="section-subtitle">
+          I have ability to learn quickly and learn new things.
+        </p>
+        <p class="section-subtitle">I want be web developer.</p>
+      </section>
+      <section class="section">
+        <h2 class="section-title">Skills</h2>
+        <ul class="list">
+          <li class="list-item">HTML</li>
+          <li class="list-item">CSS</li>
+          <li class="list-item">Java Script</li>
+        </ul>
+      </section>
+      <section class="section">
+        <h2 class="section-title">Code examples</h2>
+        <pre>
+          <code>
+        const func = (num) => {
+          if (num > 0) {
+            return num - 1;
+          }
+          return num + 1;
+        }; 
+        </code> 
+        </pre>
+      </section>
+      <section class="section">
+        <h2 class="section-title">Work experience</h2>
+        <p class="section-subtitle">none work experience</p>
+      </section>
+    </main>
+  </body>
 </html>
