feat: add section english

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <h2 class="section-title">Work experience</h2>
         <p class="section-subtitle">none work experience</p>
       </section>
+      <section class="section">
+        <h2 class="section-title">English</h2>
+        <p class="section-subtitle">level of English: A2</p>
+      </section>
     </main>
   </body>
 </html>
