--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
       <section class="section">
         <h2 class="section-title">Skills</h2>
-        <ul class="list">
+        <ul>
           <li class="list-item">HTML</li>
           <li class="list-item">CSS</li>
           <li class="list-item">Java Script</li>
@@ -57,6 +57,10 @@
       <section class="section">
         <h2 class="section-title">Work experience</h2>
         <p class="section-subtitle">none work experience</p>
+      </section>
+      <section class="section">
+        <h2 class="section-title">Education</h2>
+        <p class="section-subtitle">UDEMY: html css javascript certification course for beginner</p>
       </section>
       <section class="section">
         <h2 class="section-title">English</h2>
