fix: rename tag div -> figure

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="avatar-wrap">
+      <figure class="avatar-wrap">
         <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img" />
-      </div>
+      </figure>
       <div class="header-content">
         <h1 class="header-title">Vyacheslav Fialko</h1>
         <p class="header-subtitle">Web developer</p>
