init: start cv (new requirements for the task)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <figure class="avatar-wrap">
         <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img" />
       </figure>
@@ -50,8 +50,8 @@
             return num - 1;
           }
           return num + 1;
-        }; 
-        </code> 
+        };
+        </code>
         </pre>
       </section>
       <section class="section">
@@ -77,6 +77,6 @@
           <a href="https://rs.school/js/" class="footer-list-link"><img class="footer-logo" src="./images/logo/rs_school_js.svg" alt="logo"></a>
         </li>
       </ul>
-    </footer>
+    </footer> -->
   </body>
 </html>
