feat: add static code

--- a/index.html
+++ b/index.html
@@ -5,46 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vyacheslav Fialko CV</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <!-- <header class="header">
-      <figure class="avatar-wrap">
-        <img src="./images/avatar/avatar.jpg" alt="avatar" class="avatar-img" />
-      </figure>
-      <div class="header-content">
-        <h1 class="header-title">Vyacheslav Fialko</h1>
-        <p class="header-subtitle">Web developer</p>
+  <header class="header">
+    <nav class="nav-bar">
+      <div class="container">
+        <ul class="nav-list">
+        <li class="nav-item"><a href="#" class="nav-link active">About me</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Education</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">examples</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+      </ul>
       </div>
+    </nav>
+    <div class="container">
+      <div class="hero-header">
+        <article class="header-info">
+        <figure class="avatar-wrap">
+          <img src="./images/avatar/avatar.jpg" alt="photo" class="avatar-img" />
+        </figure>
+        <div class="header-content">
+          <h1 class="header-title">Vyacheslav Fialko</h1>
+          <p class="header-subtitle">Web developer</p>
+        </div>
+      </article>
+      <section class="header-section">
+        <h2 class="header-title">About me</h2>
+        <p class="header-subtitle">I am Junior Front-End developer.</p>
+        <p class="header-subtitle">I like to work and see the results of my work</p>
+        <p class="header-subtitle">I like to study and learn something new.</p>
+      </section>
+      </div>
+
+    </div>
+
     </header>
     <main class="main">
-      <section class="section">
-        <h2 class="section-title">Contact</h2>
-        <ul class="list">
-          <li class="list-item">tel: +38(099)-70-33-207</li>
-          <li class="list-item">telegram: +38(099)-70-33-207</li>
-          <li class="list-item">email: vyacheslav1@ukr.net</li>
-        </ul>
+      <div class="container">
+       <section class="section">
+        <h2 class="section-title">Education</h2>
+        <div class="course-container">
+          <article class="course">
+            <h3 class="course-name section-title">Javascript/Front-End Program</h3>
+            <p class="course-date section-subtitle">Date: 2021</p>
+            <p class="course-status section-subtitle">Status: in progress</p>
+            <p class="course-info section-subtitle">Look course: <a class="course-link" href="https://rs.school/js/" target="_blank">Rolling Scopes School</a></p>
+          </article>
+          <article class="course">
+            <h3 class="course-name section-title">JS/FE PRE-SCHOOL (JAVASCRIPT)</h3>
+            <p class="course-date section-subtitle">Date: 2021</p>
+            <p class="course-status section-subtitle">Status: completed</p>
+            <p class="course-info section-subtitle">Look: <a class="course-link" href="./images/certificat/n7jb8451-1.jpg" target="_blank">Certificat</a></p>
+            <p class="course-info section-subtitle">Look course: <a class="course-link" href="https://rs.school/" target="_blank">Rolling Scopes School</a></p>
+          </article>
+          <article class="course">
+            <h3 class="course-name section-title">Complete JAVASCRIPT with HTML5,CSS3 from zero to Expert-2021</h3>
+            <p class="course-date section-subtitle">Date: 2021</p>
+            <p class="course-status section-subtitle">Status: completed</p>
+            <p class="course-ihfo section-subtitle">Look: <a class="course-link" href="./images/certificat/UC-8961340c-2c5a-436f-aff1-b34b26005380.jpg" target="_blank">Certificat</a></p>
+            <p class="course-info section-subtitle">Look course: <a class="course-link" href="https://www.udemy.com/course/build-responsive-website-using-html5-css3-js-and-bootstrap-p/" target="_blank">UDEMY</a></p>
+          </article>
+          <article class="course">
+            <h3 class="course-name section-title">HTML CSS JAVASCRIPT certification course for beginner</h3>
+            <p class="course-date section-subtitle">Date: 2020</p>
+            <p class="course-status section-subtitle">Status: completed</p>
+            <p class="course-info section-subtitle">Look: <a class="course-link" href="./images/certificat/UC-1.jpg" target="_blank">Certificat</a></p>
+            <p class="course-info section-subtitle">Look course: <a class="course-link" href="https://www.udemy.com/course/html-css-javascript-certification-course-for-beginners/" target="_blank">UDEMY</a></p>
+          </article>
+        </div>
+
       </section>
-      <section class="section">
-        <h2 class="section-title">About me</h2>
-        <p class="section-subtitle">
-          I have ability to learn quickly and learn new things.
-        </p>
-        <p class="section-subtitle">I want be web developer.</p>
-      </section>
-      <section class="section">
+      <section class="section bg-gray">
         <h2 class="section-title">Skills</h2>
-        <ul>
-          <li class="list-item">HTML</li>
-          <li class="list-item">CSS</li>
-          <li class="list-item">Java Script</li>
-        </ul>
+        <div class="skills-container">
+          <article class="skills">
+            <h3 class="section-titie">Lang</h3>
+            <ul class="list">
+              <li class="list-item">HTML</li>
+              <li class="list-item">CSS</li>
+              <li class="list-item">JAVASCRIPT</li>
+            </ul>
+          </article>
+          <article class="skills">
+            <h3 class="section-titie">Library and Framework</h3>
+            <ul class="list">
+              <li class="list-item">Bootsrap</li>
+              <li class="list-item">jQuery</li>
+            </ul>
+          </article>
+        </div>
+
       </section>
       <section class="section">
         <h2 class="section-title">Code examples</h2>
         <pre>
-          <code>
+          <code class="javascript">
         const func = (num) => {
           if (num > 0) {
             return num - 1;
@@ -54,29 +112,67 @@
         </code>
         </pre>
       </section>
-      <section class="section">
+      <section class="section projects bg-gray">
+        <h2 class="section-title">My projects</h2>
+        <div class="projects-wrap">
+          <article class="project">
+            <a class="project-link" href="https://rolling-scopes-school.github.io/vyacheslav-fialko-JSFEPRESCHOOL/custom-video-player/" target="_blank">
+              <img src="./images/projects/video.png" alt="project video">
+              <section class="project-desc">
+                <h3 class="project-name">custom video player</h3>
+                <p class="project-subtitle">HTML5 video player following functionality: managing volume, playback rate, fullscreen mode, rewind back / forward with buttons and keyboard.</p>
+                <p class="project-steck">HTML, CSS, Javascript</p>
+              </section>
+            </a>
+          </article>
+          <article class="project">
+            <a class="project-link" href="https://rolling-scopes-school.github.io/vyacheslav-fialko-JSFEPRESCHOOL/js-clock/" target="_blank">
+              <img src="./images/projects/clock.png" alt="project clock">
+              <section class="project-desc">
+                <h3 class="project-name">js Clock</h3>
+                <p class="project-subtitle">Mechanical watch with moving hands in JavaScript following functionality: exact time, full name of the day of the week, date, ability to switch dark light theme</p>
+                <p class="project-steck">HTML, CSS, Javascript</p>
+              </section>
+            </a>
+          </article>
+        </div>
+      </section>
+      <section class="section works">
         <h2 class="section-title">Work experience</h2>
         <p class="section-subtitle">none work experience</p>
       </section>
-      <section class="section">
-        <h2 class="section-title">Education</h2>
-        <p class="section-subtitle">UDEMY: html css javascript certification course for beginner</p>
-      </section>
-      <section class="section">
-        <h2 class="section-title">English</h2>
+      <section class="section section-languages bg-gray">
+        <h2 class="section-title">Languages</h2>
+        <p class="section-subtitle">level of Ukrainian: Native</p>
         <p class="section-subtitle">level of English: A2</p>
+        <p class="section-subtitle">level of Russian: Fluent</p>
       </section>
+      <section class="section">
+        <h2 class="section-title">Contact</h2>
+        <ul class="list">
+          <li class="list-item">tel: +38(099)-70-33-207</li>
+          <li class="list-item">telegram: +38(099)-70-33-207</li>
+          <li class="list-item">email: vyacheslav1@ukr.net</li>
+        </ul>
+      </section>
+      </div>
+
     </main>
     <footer class="footer">
-      <ul class="footer-list">
+      <div class="container">
+        <ul class="footer-list">
         <li class="footer-list-item">
           <a href="https://github.com/Vyacheslav-Fialko" class="footer-list-link"><svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg></a>
         </li>
-        <li class="footer-list-item"><time>2021-07-19</time></li>
+        <li class="footer-list-item"><time>2021-09-27</time></li>
         <li class="footer-list-item">
           <a href="https://rs.school/js/" class="footer-list-link"><img class="footer-logo" src="./images/logo/rs_school_js.svg" alt="logo"></a>
         </li>
       </ul>
-    </footer> -->
+      </div>
+
+    </footer>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
