--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <nav class="nav-bar">
       <div class="container">
         <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link active">About me</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Education</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">examples</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-      </ul>
+          <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+          <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+          <li class="nav-item"><a href="#examples" class="nav-link">Examples</a></li>
+          <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+          <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>
+          <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+        <div class="burger">
+          <span></span>
+        </div>
       </div>
     </nav>
     <div class="container">
@@ -39,13 +44,11 @@
         <p class="header-subtitle">I like to study and learn something new.</p>
       </section>
       </div>
-
     </div>
-
     </header>
     <main class="main">
       <div class="container">
-       <section class="section">
+       <section class="section" id="education">
         <h2 class="section-title">Education</h2>
         <div class="course-container">
           <article class="course">
@@ -78,7 +81,7 @@
         </div>
 
       </section>
-      <section class="section bg-gray">
+      <section class="section bg-gray" id="skills">
         <h2 class="section-title">Skills</h2>
         <div class="skills-container">
           <article class="skills">
@@ -99,7 +102,7 @@
         </div>
 
       </section>
-      <section class="section">
+      <section class="section" id="examples">
         <h2 class="section-title">Code examples</h2>
         <pre>
           <code class="javascript">
@@ -112,7 +115,7 @@
         </code>
         </pre>
       </section>
-      <section class="section projects bg-gray">
+      <section class="section projects bg-gray" id="projects">
         <h2 class="section-title">My projects</h2>
         <div class="projects-wrap">
           <article class="project">
@@ -137,17 +140,17 @@
           </article>
         </div>
       </section>
-      <section class="section works">
+      <section class="section works" id="works">
         <h2 class="section-title">Work experience</h2>
         <p class="section-subtitle">none work experience</p>
       </section>
-      <section class="section section-languages bg-gray">
+      <section class="section section-languages bg-gray" id="languages">
         <h2 class="section-title">Languages</h2>
         <p class="section-subtitle">level of Ukrainian: Native</p>
         <p class="section-subtitle">level of English: A2</p>
         <p class="section-subtitle">level of Russian: Fluent</p>
       </section>
-      <section class="section">
+      <section class="section" id="contact">
         <h2 class="section-title">Contact</h2>
         <ul class="list">
           <li class="list-item">tel: +38(099)-70-33-207</li>
@@ -174,5 +177,6 @@
     </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script src="./main.js"></script>
   </body>
 </html>
