--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <section class="section projects bg-gray" id="projects">
         <h2 class="section-title">My projects</h2>
         <div class="projects-wrap">
-          <article class="project">
+          <div class="project">
             <a class="project-link" href="https://rolling-scopes-school.github.io/vyacheslav-fialko-JSFEPRESCHOOL/custom-video-player/" target="_blank">
               <img src="./images/projects/video.png" alt="project video">
               <section class="project-desc">
@@ -127,8 +127,8 @@
                 <p class="project-steck">HTML, CSS, Javascript</p>
               </section>
             </a>
-          </article>
-          <article class="project">
+          </div>
+          <div class="project">
             <a class="project-link" href="https://rolling-scopes-school.github.io/vyacheslav-fialko-JSFEPRESCHOOL/js-clock/" target="_blank">
               <img src="./images/projects/clock.png" alt="project clock">
               <section class="project-desc">
@@ -137,7 +137,7 @@
                 <p class="project-steck">HTML, CSS, Javascript</p>
               </section>
             </a>
-          </article>
+          </div>
         </div>
       </section>
       <section class="section works" id="works">
